--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,9 @@
 		"build": "tsc",
 		"start": "node dist/index.js",
 		"test": "jest",
-		"test:watch": "jest --watch"
+		"test:watch": "jest --watch",
+		"clean:db": "rm -f tictactoe.db test-tictactoe.db",
+		"reset:db": "npm run clean:db && npm run dev"
 	},
 	"dependencies": {
 		"cors": "^2.8.5",
